--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,8 +4,8 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
-$base-font-family: "Times New Roman", Times, serif;
-$base-font-size:   17px !default;
+$base-font-family: "Lora", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-size:   15.5px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.65 !default;
